--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,7 +7,8 @@
     "terminal.integrated.defaultProfile.linux": "bash"
   },
   "extensions": [
-    "reditorsupport.r"
+    "reditorsupport.r",
+    "ms-azuretools.vscode-docker"
   ],
   "forwardPorts": [8888],
   "postCreateCommand": "echo Welcome in My Data Science Environment"
