--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,14 +1,1 @@
-FROM rocker/r-ver:4.3.2
-
-WORKDIR /workspace
-
-COPY . /workspace
-
-RUN apt-get update && apt-get install -y \
-    libcurl4-openssl-dev \
-    libssl-dev \
-    libxml2-dev \
-    git \
-    && rm -rf /var/lib/apt/lists/*
-
-RUN Rscript -e "install.packages('renv'); renv::restore()"
+FROM mcr.microsoft.com/devcontainers/base:latest
