--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,15 +1,9 @@
 {
-  "name": "My Data Science Environment",
-  "build": {
-    "dockerfile": "Dockerfile"
+  "name": "Container Learning Environment",
+  "dockerFile": "Dockerfile",
+  "features": {
+    "ghcr.io/devcontainers/features/docker-in-docker:1": {}
   },
-  "settings": {
-    "terminal.integrated.defaultProfile.linux": "bash"
-  },
-  "extensions": [
-    "reditorsupport.r",
-    "ms-azuretools.vscode-docker"
-  ],
-  "forwardPorts": [8888],
-  "postCreateCommand": "echo Welcome in My Data Science Environment"
+  "postCreateCommand": "echo 'Welcome to the container training environment!'",
+  "remoteUser": "vscode"
 }
