Update `docker-compose.yml` and `README.md` to include all apps and modify CI workflow
* **docker-compose.yml**
  - Add services for `jupyterlab`, `rstudio`, and `vscode`
  - Set appropriate build context and ports for each service

* **README.md**
  - Update the "Docker Compose for Shiny Apps" section to include all apps
  - Provide the updated command to run the compose file

* **.github/workflows/ci.yml**
  - Modify the workflow to run the `docker-compose.yml` file instead of individual apps

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,18 @@ services:
     build: ./examples/py-shiny-app
     ports:
       - "3839:3838"
+
+  jupyterlab:
+    build: ./examples/jupyterlab
+    ports:
+      - "8888:8888"
+
+  rstudio:
+    build: ./examples/rstudio
+    ports:
+      - "8787:8787"
+
+  vscode:
+    build: ./examples/vscode
+    ports:
+      - "8080:8080"
